Create delete reservation functionality

--- a/src/components/Reservations/reservations.css
+++ b/src/components/Reservations/reservations.css
@@ -1,6 +1,6 @@
 .grid {
-    margin: 2em;
+    margin: 20px;
     display: grid;
     grid-template-columns: repeat(5, 1fr);
-    grid-gap: 4em;
+    grid-gap: 20px;
 }
