--- a/src/components/Form/form.css
+++ b/src/components/Form/form.css
@@ -1,3 +1,13 @@
 input {
     margin: 10px; 
+    width: 200px;
+    height: 20px;
+}
+
+.submit-button {
+    background-color: teal;
+    color: white; 
+    border-radius: 10px;
+    width: 200px;
+    height: 29px;
 }
